# practice

./: .gitignore  .gitmodules
cpp/: CMakeLists.txt  common.h  config.bat  main.cpp  prebuild.bat
cpp/advent_of_code/: list.cmake
cpp/advent_of_code/2017/: adventofcode.cpp  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp
cpp/advent_of_code/2017/inputs/: p4input.txt
cpp/advent_of_code/2018/: RAIL.cpp  boilerplate.snip.cpp  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp
cpp/advent_of_code/2018/inputs/: StationsAndLines.txt  day_8.txt
cpp/advent_of_code/2019/: boilerplate.snip.cpp  day_1.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp
cpp/advent_of_code/2020/: boilerplate.snip.cpp  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp
cpp/advent_of_code/2022/: day_1.cpp  day_10.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp
cpp/advent_of_code/2022/inputs/: day_10.txt
cpp/advent_of_code/2025/: .gitignore  CMakeLists.txt  main.cpp  prebuild.bat  run.bat
cpp/cmake/: all.cmake  config_app.h.cmake
cpp/m3rdparty/: list.cmake
cpp/mutils/: CMakeLists.txt
cpp/mutils/cmake/: mutils-config.cmake.in
cpp/mutils/m3rdparty/lexertk/: lexertk.hpp
cpp/rosalind/: CLUMPS.cpp  CLUMPS.h  CONS.cpp  CONS.h  Codon.cpp  DNA.cpp  FIB.cpp  FIBD.cpp  FIBD.h  Fasta.cpp  GC.cpp  GRPH.cpp  GRPH.h  HAMM.cpp  IPRB.cpp  IPRB.h  KUtils.cpp  KUtils.h  LCSM.cpp  LCSM.h  PROT.cpp  REVC.cpp  RNA.cpp  SUBS.cpp  SUBS.h  list.cmake  rosalind.h
cpp/rosalind/data/: rosalind_CLUMPS.txt  rosalind_CLUMPS_out.txt  rosalind_CONS_out.txt  rosalind_DNA.txt  rosalind_DNA_out.txt  rosalind_FIBD.txt  rosalind_FIBD_out.txt  rosalind_GC.txt  rosalind_GC_out.txt  rosalind_GRPH.txt  rosalind_GRPH_out.txt  rosalind_HAMM.txt  rosalind_IPRB.txt  rosalind_IPRB_out.txt  rosalind_LCSM.txt  rosalind_LCSM_out.txt  rosalind_PROT.txt  rosalind_PROT_out.txt  rosalind_REVC.txt  rosalind_REVC_out.txt  rosalind_RNA.txt  rosalind_RNA_out.txt
cpp/utils/: fileutils.cpp  fileutils.h  list.cmake  ringitr.h  stringutils.cpp  stringutils.h  utils.cpp  utils.h
haskell/first-project/: CHANGELOG.md  first-project.cabal  package.yaml
janet/advent_of_code/2020/: day1.janet  day1.txt
python/: fasta.py  rosalind_dna.py  rosalind_fib.py  rosalind_gc.py  rosalind_hamm.py  rosalind_revc.py  rosalind_rna.py
python/aoc/aoc2021/: answers.ipynb
python/aoc/aoc2022/: answers.ipynb  aoc.py
python/data/: rosalind_gc.txt  rosalind_revc.txt  rosalind_rna.txt
python/output/: rosalind_dna.txt  rosalind_gc.txt  rosalind_revc.txt  rosalind_rna.txt
python/poetry_test/: pyproject.toml
rust/advent_of_code/aoc2020/: README.txt
rust/advent_of_code/aoc2020/day1/: Cargo.toml
rust/advent_of_code/aoc2020/day1/src/: main.rs
rust/advent_of_code/aoc2020/day2/: Cargo.toml
rust/advent_of_code/aoc2020/day2/src/: main.rs
rust/advent_of_code/aoc2020/day3/: Cargo.toml
rust/advent_of_code/aoc2020/day3/src/: main.rs
rust/advent_of_code/aoc2020/day4/: Cargo.toml
rust/advent_of_code/aoc2020/day4/src/: main.rs
rust/advent_of_code/aoc2020/runner/: Cargo.toml
rust/advent_of_code/aoc2020/runner/src/: lib.rs
rust/advent_of_code/aoc2021/: README.txt  run.bat
rust/advent_of_code/aoc2021/day1/: Cargo.toml
rust/advent_of_code/aoc2021/day1/src/: main.rs
rust/advent_of_code/aoc2021/day10/: Cargo.toml
rust/advent_of_code/aoc2021/day10/src/: main.rs
rust/advent_of_code/aoc2021/day11/: Cargo.toml
rust/advent_of_code/aoc2021/day11/src/: main.rs  renderer.rs
rust/advent_of_code/aoc2021/day12/: Cargo.toml
rust/advent_of_code/aoc2021/day12/src/: main.rs
rust/advent_of_code/aoc2021/day13/: Cargo.toml  out.txt
rust/advent_of_code/aoc2021/day13/src/: main.rs
rust/advent_of_code/aoc2021/day14/: Cargo.toml
rust/advent_of_code/aoc2021/day14/src/: main.rs
rust/advent_of_code/aoc2021/day15/: Cargo.toml  out.txt
rust/advent_of_code/aoc2021/day15/src/: main.rs
rust/advent_of_code/aoc2021/day2/src/: main.rs
rust/advent_of_code/aoc2021/day3/: Cargo.toml
rust/advent_of_code/aoc2021/day3/src/: main.rs
rust/advent_of_code/aoc2021/day4/: Cargo.toml
rust/advent_of_code/aoc2021/day4/src/: main.rs
rust/advent_of_code/aoc2021/day5/: Cargo.toml
rust/advent_of_code/aoc2021/day5/src/: main.rs
rust/advent_of_code/aoc2021/day6/: Cargo.toml
rust/advent_of_code/aoc2021/day6/src/: main.rs
rust/advent_of_code/aoc2021/day7/src/: main.rs
rust/advent_of_code/aoc2021/day8/: Cargo.toml
rust/advent_of_code/aoc2021/day8/src/: main.rs
rust/advent_of_code/aoc2021/day9/: Cargo.toml
rust/advent_of_code/aoc2021/day9/src/: main.rs
rust/advent_of_code/aoc2021/runner/: Cargo.toml
rust/advent_of_code/aoc2021/runner/src/: lib.rs
rust/aoc/: Cargo.toml  README.md  bench.bat  get.bat
rust/aoc/src/: lib.rs
rust/aoc_2022/src/: main.rs
rust/old_aoc/aoc/src/: lib.rs
rust/old_aoc/aoc_runner/: Cargo.toml
rust/starter/: Cargo.toml
rust/starter/src/: main.rs
scheme/: day1.scm  nvim_python_log.txt_py3_script  problem1.scm
