[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = ""
authors = ["Chris Maughan <mornymorny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.0.4"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
