[package]
name = "day4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-edit = "0.8.0"
itertools = "0.10.1"
lazy-regex = "2.2.1"
lazy_static = "1.4.0"
regex = "1.5.4"

[lib]
path = "src/main.rs"